# workflow-for-AI-devs

./: .gitignore  pyproject.toml
src/: .env  fingertips.py  models.py
